# opusgod

./: .env.example  .gitignore  README.md  onchain_proof.json  pyproject.toml
config/: chains.py  settings.py  tracks.json
contracts/: SlicePricingHook.sol
docs/: conversation-log.md
scripts/: deploy_slice_hook.py  fund_agent.py  generate_onchain_proof.py  register_mech.py
src/: __init__.py
src/agent/: core.py  scheduler.py  state.py
src/analysis/: defi_analyzer.py  market_signal.py  vault_scorer.py
src/integrations/: ampersend.py  bankr.py  erc8128.py  lido.py  slice_hook.py  telegram.py  zyfai.py
src/mech/: client.py  server.py  tools.py
src/onchain/: base.py  contracts.py  gnosis.py
src/pearl/: compat.py  service.yaml
tests/: conftest.py  test_ampersend.py  test_bankr.py  test_core.py  test_defi_analyzer.py  test_erc8128.py  test_lido.py  test_market_signal.py  test_mech_client.py  test_mech_server.py  test_mech_tools.py  test_onchain.py  test_pearl.py  test_scheduler.py  test_slice_hook.py  test_state.py  test_telegram.py  test_vault_scorer.py  test_zyfai.py
